<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="29dp" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <com.name.COMP304_Assignment.Exercise1.CanvasView
        android:id="@+id/canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuidelineBottom"
        app:layout_constraintEnd_toEndOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineStart"
        app:layout_constraintTop_toTopOf="@id/horizontalGuidelineTop"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineTop"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineStart" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />


    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuidelineTopT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <Spinner
        android:id="@+id/spinnerLineStroke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/lblLineStroke" />

    <TextView
        android:id="@+id/lblLineStroke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_line_stroke"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineStart"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTopT" />

    <TextView
        android:id="@+id/lblSelectColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_line_color"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTopT" />

    <TextView
        android:id="@+id/lblDrawLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_line_direction"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTopT" />

    <Button
        android:id="@+id/btnTop"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="T"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/lblDrawLine" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="L"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnTop" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="R"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/btnTop" />

    <Button
        android:id="@+id/btnBottom"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="B"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnRight"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroupColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineTop"
        app:layout_constraintEnd_toStartOf="@+id/btnLeft"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectColor">

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_red" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_green" />

        <RadioButton
            android:id="@+id/radioPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_pink" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>